base/argo-rollout/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo
  namespace: default
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: docker.io/linsun/demo:v1
        imagePullPolicy: Always
        ports:
          - containerPort: 8001
        resources:
          requests:
            cpu: "100m"
  strategy:
    canary:
      canaryService: demo-canary # our created canary service
      stableService: demo-stable # our created stable service
      analysis:
        startingStep: 1   # index of step list, of when to start this analysis
        templates:
        - templateName: istio-success-rate
        args:             # arguments allow AnalysisTemplates to be re-used
        - name: service
          value: demo-canary
        - name: namespace
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
      trafficRouting:
        managedRoutes:
        - name: "canary-header"
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: demo-http-route
            namespace: default
      steps:
      - setWeight: 20
      - setHeaderRoute:
          name: "canary-header"
          match:
            - headerName: x-rollout-canary
              headerValue:
                exact: "true" 
      - pause: {duration: 30s}
      - setWeight: 40
      - pause: {duration: 30s}
      - setWeight: 60
      - pause: {duration: 30s}
      - setWeight: 80
      - pause: {duration: 30s}
