base/argo-rollout/deployAndService.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-stable
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  selector:
    app: rollouts-demo
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-canary
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  selector:
    app: rollouts-demo
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  selector:
    app: rollouts-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollouts-demo
  labels:
    app: rollouts-demo
spec:
  replicas: 1 # Specifies the number of instances
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      serviceAccountName: rollouts-demo
      containers:
        - name: rollouts-demo
          image: docker.io/linsun/demo:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
