base/argo-rollout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-stable
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  selector:
    app: demo
---
apiVersion: v1
kind: Service
metadata:
  name: demo-canary
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  selector:
    app: demo
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  selector:
    app: demo
