base/argo-rollout/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: default
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 8001
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint
spec:
  gatewayClassName: istio-waypoint
  listeners:
  - name: mesh
    port: 15008
    protocol: HBONE
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rollouts-demo-http-route
  namespace: default
spec:
  parentRefs:
  - name: rollouts-demo-gateway
  - group: ""
    kind: Service
    name: demo
    port: 8001
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rollouts-demo-stable
      kind: Service
      port: 8001
    - name: rollouts-demo-canary
      kind: Service
      port: 8001
