base/argo-rollout/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rag-http-route
  namespace: default
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: rag
    port: 80
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rag-stable
      kind: Service
      port: 80
    - name: rag-canary
      kind: Service
      port: 80
